<resources>
    <string name="app_name">Tarea</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_carro">Carros</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_marca">Marca del carro</string>
    <string name="msg_modelo">Modelo del carro</string>
    <string name="msg_anno">Año del carro</string>
    <string name="msg_placa">Placa del carro</string>
    <string name="msg_VIN">VIN del carro</string>
    <string name="bt_agregar">Agregar</string>
    <string name="msg_carro_added">Carro agregado</string>
    <string name="msg_data">Faltan Datos!</string>
</resources>