<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_carro">

    <fragment
        android:id="@+id/nav_carro"
        android:name="com.tarea.ui.carro.CarroFragment"
        android:label="@string/menu_carro"
        tools:layout="@layout/fragment_carro" >
        <action
            android:id="@+id/action_nav_carro_to_addCarroFragment"
            app:destination="@id/addCarroFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tarea.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tarea.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addCarroFragment"
        android:name="com.tarea.ui.carro.AddCarroFragment"
        android:label="@string/bt_agregar"
        tools:layout="@layout/fragment_add_carro" >
        <action
            android:id="@+id/action_addLugarFragment_to_nav_carro"
            app:destination="@id/nav_carro" />
    </fragment>
</navigation>